--- a/style.css
+++ b/style.css
@@ -25,6 +25,14 @@ body {
   fill: white;
 }
 
+.headliner{
+ margin-left: 80px;
+ margin-right: 25px;
+ font-size:12px;
+ color: white;
+ text-align: left;
+}
+
 .simple-button{
  background:transparent;
  border:1px solid #fff;
@@ -37,7 +45,7 @@ body {
  color:white;
  width:160px;
  height:40px;
- font-size: 14px;
+ font-size: 12px;
 }
 
 .simple-button:hover{
@@ -51,34 +59,96 @@ body {
 }
 
 .container {
+  width: 650px;
+  height: 600px;
   float: left;
+  text-align: center;
 }
 
 .brush-y .handle{
   cursor: ns-resize;;
 }
 
-#buttons{
-  width: 400px;
-  height: 560px;
+.buttons{
+  width: 650px;
   text-align: center;
-  margin-top:50px;
-  margin-left: 50px;
+  margin-top:10px;
+  margin-left:30px;
+  margin-bottom: 30px;
+  /* margin-left: 30px; */
+}
+
+h4{
+  margin-top:40px;
+  color:white;
+  font-size:18px;
 }
 
 h2{
+  text-align: center;
   margin-top:100px;
+  /* margin-left: 20px; */
   font-size: 75px;
+  margin-bottom: 10px;
   color:white;
 }
 
 h1{
-  margin-top:40px;
-  margin-left:80px;
+  /* margin-top:26px; */
+  margin-left:30px;
+  margin-bottom: 1px;
   font-size:30px;
   color:white;
+
 }
 
-svg {
+.writeup{
+  color:white;
+  font-size: 14px;
 
+}
+
+.spandiv{
+  margin-top: 20px;
+  width: 650px;
+  height: 290px;
+  float: left;
+  text-align: center;
+  margin-left: 50px;
+}
+
+span.a {
+  display: inline; /* the default for span */
+  width: 380px;
+  height: 250px;
+  padding: 5px;
+  /* border: 1px solid blue;   */
+  float:left;
+}
+
+span.b {
+  display: inline-block;
+  margin-right: 50px;
+  margin-top: 20px;
+  width: 180px;
+  height: 250px;
+  /* border: 1px solid blue; */
+}
+
+span.c {
+  display: block;
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  border: 1px solid blue;
+  background-color: yellow;
+}
+
+a{
+  color:white;
+  font-size:14px;
+}
+
+#preview{
+  border: .3px solid white;
 }
