--- a/style_location.css
+++ b/style_location.css
@@ -1,160 +1,219 @@
 * {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 html,
 body{
-    height: 100%;
-    margin:0;
-    padding: 0;
-    font-family: "Lato", sans-serif;
-    background-color: black;
+  height: 100%;
+  margin:0;
+  padding: 0;
+  font-family: "Lato", sans-serif;
+  background-color: black;
 }
 
 .overlay{
-    opacity:0.8;
-    background-color:#ccc;
-    position:fixed;
-    width:100%;
-    height:100%;
-    top:0px;
-    left:0px;
-    z-index:1000;
+  opacity:0.8;
+  background-color:#ccc;
+  position:fixed;
+  width:100%;
+  height:100%;
+  top:0px;
+  left:0px;
+  z-index:1000;
 }
 
 .row{
-    height:100%;
-    border: 1px solid black;
-    
+  height:100%;
+  border: 1px solid black;
+  
 }
 
 /* .infobar{
-    height: 100%;
-    width: 0px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    
+  height: 100%;
+  width: 0px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  
 } */
 
 .sidebar {
-    height: 100%;
-    width: 400px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-  }
-  
-  .sidebar a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .sidebar a:hover {
-    color: #f1f1f1;
-  }
-  
-  .sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-  
-  .openbtn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: #111;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-  }
-  
-  .openbtn:hover {
-    background-color: #444;
-  }
+  height: 100%;
+  width: 400px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  color: #f1f1f1;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 220px;
+  right: 25px;
+  font-size: 20px;
+  margin-left: 50px;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color: #444;
+}
+
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
+  background-color: black;
+  height: 100%;
 
   
-  #main {
-    transition: margin-left .5s;
-    padding: 16px;
-    background-color: black;
-    height: 100%;
+}
+.box {
+position: relative;
+      width: 70%;		/* desired width */
+      background-color: black;
+  }
+.box:before {
+  content: "";
+  float: left;
+  padding-top: 100%; 	/* initial ratio of 1:1*/
+}
+/* https://mademyday.de/height-equals-width-with-pure-css/ */
+.sidebartext{
+  color:#f1f1f1;
+  opacity:0.5;
+  font-size: 20;
+  margin-left: 25px;
+}
 
+.rangeinfo{
+  color:#f1f1f1;
+  opacity:0.5;
+  font-size: 20;
+  margin-left: 50px;
+}
+
+.star_detail{
+  color:#f1f1f1;
+  opacity:0.5;
+  font-size: 15px;
+  margin-left: 25px;
+}
+
+.home{
+  color:#f1f1f1;
+  opacity:0.5;
+  font-size: 10;
+  margin-top: 0px;
+}
+
+#rangeinfo{
+  color:#f1f1f1;
+  opacity:0.7;
+  font-size: 20;
+  margin-left: 50px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
+}
+
+
+
+#chart{
+    height:90%;
+    margin-left: 400px;
+    /* border: 2px solid blue; */
+}
+
+#star_navigator, #star_position{
+    margin-left: 100px;
+    opacity: 0.8;
+}
+
+#ssvg{
+    border: 1px solid grey;
     
-  }
-  .box {
-	position: relative;
-        width: 70%;		/* desired width */
-        background-color: black;
-    }
-  .box:before {
-    content: "";
-    float: left;
-    padding-top: 100%; 	/* initial ratio of 1:1*/
-  }
- /* https://mademyday.de/height-equals-width-with-pure-css/ */
- .sidebartext{
-    color:#f1f1f1;
-    opacity:0.5;
-    font-size: 20;
-    margin-left: 25px;
-  }
+}
 
-  .star_detail{
-    color:#f1f1f1;
-    opacity:0.5;
-    font-size: 12px;
-    margin-left: 25px;
-  }
+.no_image{
+      margin-left: 20%;
+    max-width: 60%;
+    height: auto;
+    width:80%;
+}
 
-  .home{
-    color:#f1f1f1;
-    opacity:0.5;
-    font-size: 10;
-  }
+/* tooltip */
 
-  #rangeinfo{
-    color:#f1f1f1;
-    opacity:0.7;
-    font-size: 20;
-    margin-left: 50px;
-  }
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-  @media screen and (max-height: 450px) {
-    .sidebar {padding-top: 15px;}
-    .sidebar a {font-size: 18px;}
-  }
+.tooltip {
+  position: relative;
+  display: inline-block;
+  color:#f1f1f1;
+  opacity:.5;
+  font-size: 15px;
+  margin-left: 25px;
+}
 
- 
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
 
-  #chart{
-      height:90%;
-      margin-left: 400px;
-      /* border: 2px solid blue; */
-  }
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
 
-  #star_navigator, #star_position{
-      margin-left: 100px;
-      opacity: 0.8;
-  }
-
-  #ssvg{
-      border: 1px solid grey;
-      
-  }
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
